// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/_components/SearchModal Default play-test 1`] = `
<button data-testid="search-modal__button">
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       class="h-7 w-7 text-dark hover:opacity-70"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
    >
    </path>
  </svg>
</button>
`;

exports[`app/_components/SearchModal InvalidInput play-test 1`] = `
<button data-testid="search-modal__button">
  <svg xmlns="http://www.w3.org/2000/svg"
       fill="none"
       viewbox="0 0 24 24"
       stroke-width="1.5"
       stroke="currentColor"
       aria-hidden="true"
       class="h-7 w-7 text-dark hover:opacity-70"
  >
    <path stroke-linecap="round"
          stroke-linejoin="round"
          d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
    >
    </path>
  </svg>
</button>
<div class="fixed left-0 top-0 z-50 flex h-screen w-screen cursor-pointer justify-center bg-black bg-opacity-70 pt-20">
  <div class="h-16 w-4/5 max-w-[500px] rounded-md bg-primary shadow-2xl">
    <form action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
          class="flex h-full w-full items-center justify-between px-4"
    >
      <input class="h-full w-full bg-transparent text-dark focus:outline-none"
             placeholder="@name@example.com"
             data-testid="search-modal__input"
             type="text"
             name="input"
      >
      <button type="submit"
              class="h-7 w-7 text-dark"
              data-testid="search-modal__submit"
      >
        <svg xmlns="http://www.w3.org/2000/svg"
             fill="none"
             viewbox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             aria-hidden="true"
             class="h-7 w-7 text-dark hover:opacity-70"
        >
          <path stroke-linecap="round"
                stroke-linejoin="round"
                d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z"
          >
          </path>
        </svg>
      </button>
    </form>
  </div>
</div>
`;
